fixing background on mobile

--- a/style.css
+++ b/style.css
@@ -15,6 +15,18 @@ html {
     min-height: 100vh;
 }
 
+@media (max-width: 768px) {
+    html {
+        background-image: 
+            url('resources/top-left.svg'),
+            url('resources/bottom-left.svg');
+        background-position: 
+            top center,
+            bottom center;
+        background-size: 100% auto, 100% auto;
+    }
+}
+
 body {
     font-family: "Baloo 2", sans-serif;
     max-width: 600px;
